[package]
name = "stack_ptr"
version = "0.1.0"
authors = ["Michael Hewson <michael@michaelhewson.ca>"]
description = "An owned pointer to stack-allocated data"
repository = "https://github.com/mikeyhew/rust-stack_ptr"
documentation = "https://docs.rs/"
license = "MIT"

[dependencies]
stable_deref_trait = "1.0"

[features]
nightly = []
